infra/k8s/storage/garage/backend-traffic-policy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: garage
  namespace: garage
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: garage
  timeout:
    http:
      requestTimeout: 0s
